--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.+'
 
     //Bottom NavigationViewEX Libraries
-
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
     implementation "com.android.support:design:27.+"
 
     //Firebase Dependencies
