--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".activity.Create_User" />
         <activity android:name=".activity.MatchupActivity" />
         <activity android:name=".activity.Player_Picks_Activity" />
-        <activity android:name=".activity.SettingsActivity"></activity>
+        <activity android:name=".activity.SettingsActivity" />
+        <activity android:name=".activity.Single_Player_View"></activity>
     </application>
 
 </manifest>
